Continue to fix possible, hidden bugs