@@ -5,11 +5,13 @@ import com.verdant.salon_ecomm.dtos.product.*;
 import com.verdant.salon_ecomm.entities.MediaImage;
 import com.verdant.salon_ecomm.entities.Product;
 import com.verdant.salon_ecomm.models.enums.CollectionSort;
-import com.verdant.salon_ecomm.models.enums.ItemCatalog;
+import com.verdant.salon_ecomm.models.enums.CollectionStatus;
 import com.verdant.salon_ecomm.models.enums.ItemType;
 import com.verdant.salon_ecomm.repositories.MediaImageRepository;
 import com.verdant.salon_ecomm.repositories.ProductRepository;
 import com.verdant.salon_ecomm.specifications.ProductSpec;
+import com.verdant.salon_ecomm.utils.EnumUtils;
+import com.verdant.salon_ecomm.models.enums.ItemCatalog;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -19,6 +21,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -31,51 +34,41 @@ public class ProductService {
   private final MediaImageRepository mediaImageRepository;
 
   public ProductPage getProducts(
-          String category, String search,
-          CollectionSort sort, int page, int pageSize) {
+      String category, String search,
+      CollectionSort sort, int page, int pageSize
+  ) {
     Pageable pageable = PageRequest.of(page - 1, pageSize, toSort(sort));
 
     Page<Product> result = productRepository.findAll(
-            ProductSpec.filter(category, search, true),
-            pageable
+        ProductSpec.filter(category, search, CollectionStatus.ACTIVE),
+        pageable
     );
 
-    List<ProductSummaryDto> items = result.getContent().stream()
-            .map(this::toSummaryDTO)
-            .toList();
-
-    return new ProductPage(items, page, pageSize, (int) result.getTotalElements(), result.getTotalPages());
-  }
-
-  private ProductSummaryDto toSummaryDTO(Product product) {
-    String primaryImageUrl = mediaImageRepository
-            .findByEntityTypeAndEntityIdAndIsPrimaryTrue(ItemType.PRODUCT, product.getId())
-            .map(MediaImage::getUrl)
-            .orElse(null);
-
-    return new ProductSummaryDto(
-            product.getId().toString(),
-            product.getName(),
-            product.getItemCatalog().name(),
-            product.getPrice(),
-            product.getSalePrice(),
-            primaryImageUrl,
-            product.getBadge()
+    return new ProductPage(
+        result.getContent(),
+        page,
+        pageSize,
+        (int) result.getTotalElements(),
+        result.getTotalPages()
     );
   }
 
-  public ProductDetailDto getProductDetail(UUID id) {
+  public Product getProductDetail(UUID id) {
     Product product = productRepository.findById(id)
-            .orElseThrow(() -> new EntityNotFoundException("Product not found"));
+        .orElseThrow(() -> new EntityNotFoundException("Product not found"));
 
-    if (!product.getIsActive()) {
+    if (product.getStatus() != CollectionStatus.ACTIVE) {
       throw new EntityNotFoundException("Product not found");
     }
 
-    List<MediaImage> images = mediaImageRepository
-            .findByEntityTypeAndEntityIdOrderBySortOrderAsc(ItemType.PRODUCT, product.getId());
+    return product;
+  }
 
-    return new ProductDetailDto(
+  private AdminProductDto toAdminDTO(Product product) {
+    List<MediaImage> images = mediaImageRepository
+        .findByEntityTypeAndEntityIdOrderBySortOrderAsc(ItemType.PRODUCT, product.getId());
+
+    return new AdminProductDto(
         product.getId().toString(),
         product.getName(),
         product.getItemCatalog().name(),
@@ -83,66 +76,43 @@ public class ProductService {
         product.getPrice(),
         product.getSalePrice(),
         product.getSku(),
-        images.stream().map(MediaImage::getUrl).toList(),
+        images.stream().map(this::toImageDTO).toList(),
         product.getTags() != null ? product.getTags() : List.of(),
-        product.getInfo() != null ? List.of(product.getInfo()) : List.of(),
+        product.getInfo() != null ? Arrays.asList(product.getInfo()) : List.of(),
         product.getBadge(),
-        product.getStockQuantity() > 0,
+        product.isFeatured(),
+        product.getStatus(),
+        product.getStockQuantity(),
+        product.getLowStockThreshold(),
         product.getReviewCount(),
         product.getAverageRating(),
-        false
-    );
-  }
-
-  private AdminProductDto toAdminDTO(Product product) {
-    List<MediaImage> images = mediaImageRepository
-            .findByEntityTypeAndEntityIdOrderBySortOrderAsc(ItemType.PRODUCT, product.getId());
-
-    return new AdminProductDto(
-      product.getId().toString(),
-      product.getName(),
-      product.getItemCatalog().name(),
-      product.getDescription(),
-      product.getPrice(),
-      product.getSalePrice(),
-      product.getSku(),
-      images.stream().map(this::toImageDTO).toList(),
-      product.getTags() != null ? product.getTags() : List.of(),
-      product.getInfo() != null ? List.of(product.getInfo()) : List.of(),
-      product.getBadge(),
-      product.isFeatured(),
-      product.getIsActive(),
-      product.getStockQuantity(),
-      product.getLowStockThreshold(),
-      product.getReviewCount(),
-      product.getAverageRating(),
-      product.getCreatedAt(),
-      product.getUpdatedAt()
+        product.getCreatedAt(),
+        product.getUpdatedAt()
     );
   }
 
   public AdminProductPage getAdminProducts(
-          String category, String search,
-          CollectionSort sort,
-          Boolean isActive, int page, int pageSize
+      String category, String search,
+      CollectionSort sort,
+      CollectionStatus status, int page, int pageSize
   ) {
     Pageable pageable = PageRequest.of(page - 1, pageSize, toSort(sort));
 
     Page<Product> result = productRepository.findAll(
-            ProductSpec.filter(category, search, isActive),
-            pageable
+        ProductSpec.filter(category, search, status),
+        pageable
     );
 
     List<AdminProductDto> items = result.getContent().stream()
-            .map(this::toAdminDTO)
-            .toList();
+        .map(this::toAdminDTO)
+        .toList();
 
     return new AdminProductPage(items, page, pageSize, (int) result.getTotalElements(), result.getTotalPages());
   }
 
   public AdminProductDto getAdminProduct(UUID id) {
     Product product = productRepository.findById(id)
-            .orElseThrow(() -> new EntityNotFoundException("Product not found"));
+        .orElseThrow(() -> new EntityNotFoundException("Product not found"));
 
     return toAdminDTO(product);
   }
@@ -169,20 +139,20 @@ public class ProductService {
   @Transactional
   public AdminProductDto createProduct(CreateProductInput input) {
     Product product = Product.builder()
-            .name(input.name())
-            .itemCatalog(ItemCatalog.valueOf(input.category()))
-            .description(input.description())
-            .price(input.price())
-            .salePrice(input.salePrice())
-            .sku(input.sku())
-            .badge(input.badge())
-            .tags(input.tags())
-            .info(input.info() != null ? input.info().toArray(new String[0]) : new String[0])
-            .stockQuantity(input.stockQuantity())
-            .lowStockThreshold(input.lowStockThreshold())
-            .isFeatured(input.isFeatured())
-            .isActive(true)
-            .build();
+      .name(input.name())
+      .itemCatalog(EnumUtils.parseEnum(ItemCatalog.class, input.category(), "category"))
+      .description(input.description())
+      .price(input.price())
+      .salePrice(input.salePrice())
+      .sku(input.sku())
+      .badge(input.badge())
+      .tags(input.tags())
+      .info(input.info() != null ? input.info().toArray(new String[0]) : new String[0])
+      .stockQuantity(input.stockQuantity())
+      .lowStockThreshold(input.lowStockThreshold())
+      .isFeatured(input.isFeatured() != null ? input.isFeatured() : false)
+      .status(input.status() != null ? input.status() : CollectionStatus.ACTIVE)
+      .build();
 
     return toAdminDTO(productRepository.save(product));
   }
@@ -193,7 +163,7 @@ public class ProductService {
             .orElseThrow(() -> new EntityNotFoundException("Product not found"));
 
     if (input.name() != null) product.setName(input.name());
-    if (input.category() != null) product.setItemCatalog(ItemCatalog.valueOf(input.category()));
+    if (input.category() != null) product.setItemCatalog(EnumUtils.parseEnum(ItemCatalog.class, input.category(), "category"));
     if (input.description() != null) product.setDescription(input.description());
     if (input.price() != null) product.setPrice(input.price());
     if (input.salePrice() != null) product.setSalePrice(input.salePrice());
@@ -204,7 +174,7 @@ public class ProductService {
     if (input.stockQuantity() != null) product.setStockQuantity(input.stockQuantity());
     if (input.lowStockThreshold() != null) product.setLowStockThreshold(input.lowStockThreshold());
     if (input.isFeatured() != null) product.setFeatured(input.isFeatured());
-    if (input.isActive() != null) product.setIsActive(input.isActive());
+    if (input.status() != null) product.setStatus(input.status());
 
     return toAdminDTO(productRepository.save(product));
   }
